Fix Choices Moving Layout Bug

--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ img {
   color: #a61e13;
   background-color: #60d394;
   font-size: 2rem;
-  width: 15rem;
+  width: 15em;
   margin: 0.5em;
   padding: 0.5em;
 }
@@ -170,7 +170,6 @@ game page
 .user-choices,
 .computer-choices {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 6rem;
